--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
             <img src="assets/images/item_3240.png" class="pageItem hd" alt="    StateType Down" style="left:7px !important;top:7px !important;" id="item3240"/>
           </div>
         </button>
-      </a><a href="https://www.redacademica.edu.co/sites/default/files/2022-02/Bita%CC%81cora%20%284%29.docx" target="_blank" alt="Bitácora 3"><a href="shorturl.at/kGNU8" target="_blank" id="item3246">
+      </a><a href="https://www.redacademica.edu.co/sites/default/files/2022-02/Bita%CC%81cora%20%284%29.docx" target="_blank" alt="Bitácora 3"><a href="https://www.redacademica.edu.co/sites/default/files/2022-02/Bita%CC%81cora%20%284%29.docx" target="_blank" id="item3246">
           <button class="pageItem hidden has-down has-on" data-ani="appear-3246 0.5s linear 1" data-id="3246" id="item3246" data-hidestart="1" name="Bitácora 3">
             <div class="pageItem state btn-off">
               <img src="assets/images/item_3247.png" class="pageItem hd" alt="    StateType Normal" style="left:6px !important;top:6px !important;" id="item3247"/>
