--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
           <img src="assets/images/item_2979.png" class="pageItem hd" alt="    StateType Down" style="left:1px !important;top:1px !important;" id="item2979"/>
         </div>
       </button>
-      <img src="assets/images/item_1316.png" class="pageItem hd" alt="Rectangle" style="left:7px !important;top:190px !important;" id="item1316"/><a href="laboratoriodemedios@educacionbogota.gov.co" target="_blank" alt="Button 44">
+      <img src="assets/images/item_1316.png" class="pageItem hd" alt="Rectangle" style="left:7px !important;top:190px !important;" id="item1316"/>
         <button class="pageItem has-down has-on" id="item4276" data-id="4276" name="Button 44">
           <div class="pageItem state btn-off">
             <img src="assets/images/item_4274.png" class="pageItem hd" alt="    StateType Normal" id="item4274"/>
